src/styles/_typography.module.scss
@import "./colors.module";

$font-size-xs: 12px;
$font-size-sm: 14px;
$font-size-md: 18px;
$font-size-lg: 20px;
$font-size-xl: 24px;

.cardTitle{
font-family: 'Archivo';
font-style: italic;
font-weight: 700;
font-size: $font-size-xl;
line-height: 31px;
letter-spacing: -0.5px;
text-transform: uppercase;
color: $main-black;
margin: 0;
text-overflow: ellipsis;
white-space: nowrap;
overflow: hidden;
-webkit-line-clamp: 1;
}

.cardDescription{
   font-family: 'Archivo';
   font-style: italic;
   font-weight: 400;
   font-size: $font-size-xs;
   line-height: 17px;
   color: $main-black;
   margin: 0;
}

.cardTags{
   font-family: 'Barlow';
   font-style: italic;
   font-weight: 700;
   font-size: $font-size-xs;
   line-height: 14px;
   letter-spacing: 0.01em;
   text-transform: uppercase;
   margin: 0;
}

@mixin subtitleMixin{
   font-family: 'Archivo';
   font-style: normal;
   font-weight: 700;
   font-size: $font-size-xs;
   line-height: 14px;
   text-transform: uppercase;
   margin: 0;
}
.subtitleLabel{
   @include subtitleMixin;
   line-height: 23px;
   color: $grey-2;
   font-size: $font-size-sm;
}
.subtitleArch{
   @include subtitleMixin;
   line-height: 17px;
   color: $main-black;
}
.subtitleArchI{
   @include subtitleMixin;
   line-height: 14px;
   color: $main-black;
   font-style: italic;
}

.subtitleBarI{
   @include subtitleMixin;
   font-family: 'Barlow';
   font-style: italic;
   letter-spacing: 0.01em;
}

.cardPrice{
   font-family: 'Barlow';
   font-style: normal;
   font-weight: 600;
   font-size: $font-size-lg;
   line-height: 33px;
   margin: 0;
   color: $main-black;
}
.cardOldPrice{
   font-family: 'Barlow';
   font-style: normal;
   font-weight: 400;
   font-size: $font-size-sm;
   line-height: 33px;
   text-decoration-line: line-through;
   margin: 0;
   color: $grey-1;
   display: flex;
   align-items: center;
}

